作成された一覧を取得するまで作成
